test/src/e2e_vm_tests/test_programs/should_pass/dca/multiple_fns_same_name/src/colors1.sw
library colors1;

pub fn color() {
}
