test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/event_indexed_attr.sw
library;

#[event(arg)]
pub struct NotOk { }
